<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tirup.myapplication.SettingActivity"
    android:background="@color/green">

    <TextView
        android:id="@+id/setting"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:padding="10dp"
        android:singleLine="true"
        android:text="@string/setting"
        android:textAlignment="center"
        android:textSize="50dp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/auto"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20dp" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/auto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggleButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/speed"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/toggleButton"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/radioGroup">
        <RadioButton
            android:id="@+id/fast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fast"
            android:textSize="20dp"/>
        <RadioButton
            android:id="@+id/radio_ninjas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slow"
            android:textSize="20dp"/>
    </RadioGroup>

    <Switch
        android:id="@+id/gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/gps"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gps"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/rating"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp" />


</RelativeLayout>