<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tirup.myapplication.IndexActivity"
    android:background="@color/green">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:padding="10dp"
        android:singleLine="true"
        android:text="@string/welcome"
        android:textSize="50dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/setting"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:text="@string/setting"
            android:textAllCaps="false"
            android:textSize="60dp"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:textStyle="bold" />

        <Button
            android:id="@+id/help"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:text="@string/help"
            android:textAllCaps="false"
            android:textSize="60dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginTop="15dp" />

        <Button
            android:id="@+id/sign_out"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:text="@string/sign_out"
            android:textAllCaps="false"
            android:textSize="60dp"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginTop="15dp" />
    </LinearLayout>
</RelativeLayout>