<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tirup.myapplication.MainActivity"
    android:background="@color/green">

    <TextView
        android:id="@+id/main"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/black"
        android:textSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@+id/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="SignInRedirect"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:background="@color/colorAccent"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="188dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="SignUpRedirect"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:background="@color/orange"
        android:textStyle="bold" />
</android.support.constraint.ConstraintLayout>